--- a/index.html
+++ b/index.html
@@ -1,31 +1,32 @@
-<!DOCTYPE html>
-<html>
+<!-- Created by Jonathan Pizarra-->
 
-<head>
-  <title>Example video streaming from Axis camera</title>
-</head>
 
-<body>
-  <div>
-    <div>
-      <label for="device">Device IP:</label>
-      <input id="device" type="text" value="195.60.68.14:12106" placeholder="195.60.68.14:12106" />
-    </div>
-    <div>
-      Video encoding:
-      <input type="radio" name="encoding" id="h264" checked />
-      <label for="h264">H.264</label>
-      <input type="radio" name="encoding" id="jpeg" />
-      <label for="jpeg">Motion JPEG</label>
-    </div>
-    <button id="play">Play</button>
-  </div>
-  <div style="position: fixed; width: 1280px; height: 720px">
-    <video style="position: absolute; width: 100%; height: 100%;" autoplay></video>
-    <canvas style="position: absolute; width: 100%; height: 100%;"></canvas>
-  </div>
-  <script src="media-stream-library.min.js"></script>
-  <script src="simple-player.js"></script>
-</body>
+<!-- 
+Credits to Krow for the babelizer script
 
-</html>
+This code is based on a video on the YouTube channel Mathologer about times table:
+
+    https://youtu.be/qhbuKbxJsk8
+
+This is also my first code with ES6 syntax.
+
+Witness the beauty of mathematics.😎
+
+Update: June 19, 2018: Changed from modulo 360 to modulo 500 for more detailed patterns
+
+Update: June 20, 2018: Removed parseInt in input prompt to accept decimal numbers
+ -->
+ <!DOCTYPE html>
+ <html>
+     <head>
+         <title>Circular Times Table Modulo 500</title>
+         <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+         <!-- Remember... Any script added that use ES6 MUST set his type attr to "text/babel" -->
+     </head>
+     <body>
+         <canvas id="canv"></canvas>
+         <pre><div id="stats">N</div></pre>
+         <button id="but">CLICK HERE</button>
+         <pre><a id="yt" href="https://youtu.be/qhbuKbxJsk8">YOUTUBE REFERENCE</a></pre>
+     </body>
+ </html>
