--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ Update: June 20, 2018: Removed parseInt in input prompt to accept decimal number
  <html>
      <head>
          <title>Circular Times Table Modulo 500</title>
-         <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+         <script src="babel.min.js"></script>
          <!-- Remember... Any script added that use ES6 MUST set his type attr to "text/babel" -->
      </head>
      <body>
