--- a/index.html
+++ b/index.html
@@ -23,6 +23,35 @@ Update: June 20, 2018: Removed parseInt in input prompt to accept decimal number
          <script src="babel.min.js"></script>
          <!-- Remember... Any script added that use ES6 MUST set his type attr to "text/babel" -->
      </head>
+     <style>
+/* Created by Jonathan Pizarra */
+
+body {
+    margin:0;
+    padding:0;
+}
+#canv{
+    
+}
+#stats{
+    border:1px solid transparent ;
+    height:50px;
+    width:100vw;
+    position:absolute ;
+      top:0;
+}
+#but{
+    position:absolute ;
+      bottom:0;
+      left:40%;
+}
+#yt{
+    position:absolute ;
+      top:0;
+      right:0;
+    color:#4ae;
+}
+    </style>
      <body>
          <canvas id="canv"></canvas>
          <pre><div id="stats">N</div></pre>
