--- a/index.html
+++ b/index.html
@@ -1,61 +1,130 @@
-<!-- Created by Jonathan Pizarra-->
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Profile</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
 
-<!-- 
-Credits to Krow for the babelizer script
+<body>
+    <header>
+        <div class="container">
+            <div class="row no-gutters">
+                <div class="col-lg-4 col-md-4">
+                    <img src="main.jpg" alt="">
+                </div>
+                <div class="col-lg-8 col-md-8">
+                    <div class="d-flex flex-column">
+                        <div class="p-5 bg-dark text-white text-center">
+                            <h1 class="display-5">Vivek Kumar</h1>
+                        </div>
+                    </div>
+                    <div class="p-3 text-white bg-black">
+                        ADP Engineer @ AXIS VIDEO SYSTEMS INDIA PRIVATE LIMITED
+                    </div>
+                    <div class="d-flex flex-row text-center text-white">
+                        <div class="p-4 bg-success font-div" data-toggle="collapse" data-target="#home">
+                            <i class="fa fa-home fa-2x d-block"></i>Skills
+                        </div>
+                        <div class="p-4 bg-info font-div" data-toggle="collapse" data-target="#resume">
+                            <i class="fa fa-folder fa-2x d-block"></i>Experience
+                        </div>
+                        <div class="p-4 bg-warning font-div" data-toggle="collapse" data-target="#edu">
+                            <i class="fa fa-graduation-cap fa-2x d-block"></i>Qulification
+                        </div>
+                        <div class="p-4 bg-danger font-div" data-toggle="collapse" data-target="#contact">
+                            <i class="fa fa-envelope fa-2x d-block"></i>Contact
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <div class="container">
+        <div class="collapse" id="home">
+            <div class="card card-body bg-success text-dark">
+                <h2 class="text-white">My Skills</h2>
+                <p>C#, WPF, .Net Core, MVVM, ElasticSearch, Kibana, Kafka, Zeppelin,
+                  MySQL, MQTT, HTML5, Xamarin, NodeJS, LINUX. 
+                </p>
+                <h4>Network Cameras</h4>
+                <div class="progress mb-4">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 90%;"></div>
+                </div>
+                <h4>ACCESS CONTROL</h4>
+                <div class="progress mb-4">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 80%;"></div>
+                </div>
+                <h4>RADAR Integration</h4>
+                <div class="progress mb-4">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 50%;"></div>
+                </div>
+            </div>
+        </div>
+        
+        <div class="collapse" id="contact">
+            <div class="p-4 bg-danger">
+                <h1>Contact Me</h1>
+                <p>Please feel free to reach out to me</p>
+            </div>
+            <div class="card card-body">
+                <div class="row justify-content-center">
+                    <div class="col-lg-8 col-md-8 col-12">
+                        <form>
+                            <div class="form-group">
+                                <div class="input-group input-group-lg">
+                                    <span class="input-group-addon bg-warning text-white p-2">
+                                        <i class="fa fa-user"></i>
+                                    </span>
+                                    <input type="text" name="" id="user" class="form-control bg-black text-white"
+                                        placeholder="Name" autocomplete="off">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="input-group input-group-lg">
+                                    <span class="input-group-addon bg-warning text-white p-2">
+                                        <i class="fa fa-envelope"></i>
+                                    </span>
+                                    <input type="email" name="email" id="user" class="form-control bg-black text-white"
+                                        placeholder="Email" autocomplete="off">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="input-group input-group-lg">
+                                    <span class="input-group-addon bg-warning text-white p-2">
+                                        <i class="fa fa-envelope"></i>
+                                    </span>
+                                    <input type="text" name="" id="message" class="form-control bg-black text-white"
+                                        placeholder="Message" autocomplete="off">
+                                </div>
+                            </div>
+                            <input type="submit" value="Send" class="btn btn-success">
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
-This code is based on a video on the YouTube channel Mathologer about times table:
+    <div class="container">
+        <footer class="p-5 bg-black text-center">
+          <a href="Profile.pdf" download> Download
+        </footer>
+</div>
 
-    https://youtu.be/qhbuKbxJsk8
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
-This is also my first code with ES6 syntax.
+    <script>
+        $('.font-div').click(function(){
+            $('.collapse').collapse('hide');
+        });
 
-Witness the beauty of mathematics.😎
-
-Update: June 19, 2018: Changed from modulo 360 to modulo 500 for more detailed patterns
-
-Update: June 20, 2018: Removed parseInt in input prompt to accept decimal numbers
- -->
- <!DOCTYPE html>
- <html>
-     <head>
-         <title>Circular Times Table Modulo 500</title>
-         <script src="babel.min.js"></script>
-         <!-- Remember... Any script added that use ES6 MUST set his type attr to "text/babel" -->
-     </head>
-     <style>
-/* Created by Jonathan Pizarra */
-
-body {
-    margin:0;
-    padding:0;
-}
-#canv{
-    
-}
-#stats{
-    border:1px solid transparent ;
-    height:50px;
-    width:100vw;
-    position:absolute ;
-      top:0;
-}
-#but{
-    position:absolute ;
-      bottom:0;
-      left:40%;
-}
-#yt{
-    position:absolute ;
-      top:0;
-      right:0;
-    color:#4ae;
-}
-    </style>
-     <body>
-         <canvas id="canv"></canvas>
-         <pre><div id="stats">N</div></pre>
-         <button id="but">CLICK HERE</button>
-         <pre><a id="yt" href="https://youtu.be/qhbuKbxJsk8">YOUTUBE REFERENCE</a></pre>
-     </body>
- </html>
+    </script>
+</body>
+</html>
