--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="row no-gutters">
                 <div class="col-lg-4 col-md-4">
-                    <img src="main.jpg" alt="">
+                    <img src="main1.jpg" alt="">
                 </div>
                 <div class="col-lg-8 col-md-8">
                     <div class="d-flex flex-column">
