--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                     <span class="input-group-addon bg-warning text-white p-2">
                                         <i class="fa fa-user"></i>
                                     </span>
-                                    <input type="text" name="" id="user" class="form-control bg-black text-white"
+                                    <input type="text" name="" id="user" class="form-control bg-black text-dark"
                                         placeholder="Name" autocomplete="off">
                                 </div>
                             </div>
@@ -89,7 +89,7 @@
                                     <span class="input-group-addon bg-warning text-white p-2">
                                         <i class="fa fa-envelope"></i>
                                     </span>
-                                    <input type="email" name="email" id="user" class="form-control bg-black text-white"
+                                    <input type="email" name="email" id="user" class="form-control bg-black text-dark"
                                         placeholder="Email" autocomplete="off">
                                 </div>
                             </div>
@@ -98,7 +98,7 @@
                                     <span class="input-group-addon bg-warning text-white p-2">
                                         <i class="fa fa-envelope"></i>
                                     </span>
-                                    <input type="text" name="" id="message" class="form-control bg-black text-white"
+                                    <input type="text" name="" id="message" class="form-control bg-black text-dark"
                                         placeholder="Message" autocomplete="off">
                                 </div>
                             </div>
