--- a/index.html
+++ b/index.html
@@ -4,11 +4,129 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vivek Kumar</title>
-    
+    <title>My Profile</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
-    <div class="sketchfab-embed-wrapper"> <iframe title="Detailed Human Skull" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/2d6feb90e20d4389afb2b885eece0a48/embed"> </iframe> <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;"> <a href="https://sketchfab.com/3d-models/detailed-human-skull-2d6feb90e20d4389afb2b885eece0a48?utm_medium=embed&utm_campaign=share-popup&utm_content=2d6feb90e20d4389afb2b885eece0a48" target="_blank" style="font-weight: bold; color: #1CAAD9;"> Detailed Human Skull </a> by <a href="https://sketchfab.com/VAA?utm_medium=embed&utm_campaign=share-popup&utm_content=2d6feb90e20d4389afb2b885eece0a48" target="_blank" style="font-weight: bold; color: #1CAAD9;"> VAA </a> on <a href="https://sketchfab.com?utm_medium=embed&utm_campaign=share-popup&utm_content=2d6feb90e20d4389afb2b885eece0a48" target="_blank" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a></p></div>
+    <header>
+        <div class="container">
+            <div class="row no-gutters">
+                <div class="col-lg-4 col-md-4">
+                    <img src="main1.jpg" alt="">
+                </div>
+                <div class="col-lg-8 col-md-8">
+                    <div class="d-flex flex-column">
+                        <div class="p-5 bg-dark text-white text-center">
+                            <h1 class="display-5">Vivek Kumar</h1>
+                        </div>
+                    </div>
+                    <div class="p-3 text-white bg-black">
+                        ADP Engineer @ AXIS VIDEO SYSTEMS INDIA PRIVATE LIMITED
+                    </div>
+                    <div class="d-flex flex-row text-center text-white">
+                        <div class="p-4 bg-success font-div" data-toggle="collapse" data-target="#home">
+                            <i class="fa fa-home fa-2x d-block"></i>Skills
+                        </div>
+                        <div class="p-4 bg-info font-div" data-toggle="collapse" data-target="#resume">
+                            <i class="fa fa-folder fa-2x d-block"></i>Experience
+                        </div>
+                        <div class="p-4 bg-warning font-div" data-toggle="collapse" data-target="#edu">
+                            <i class="fa fa-graduation-cap fa-2x d-block"></i>Qulification
+                        </div>
+                        <div class="p-4 bg-danger font-div" data-toggle="collapse" data-target="#contact">
+                            <i class="fa fa-envelope fa-2x d-block"></i>Contact
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <div class="container">
+        <div class="collapse" id="home">
+            <div class="card card-body bg-success text-dark">
+                <h2 class="text-white">My Skills</h2>
+                <p>C#, WPF, .Net Core, MVVM, ElasticSearch, Kibana, Kafka, Zeppelin,
+                  MySQL, MQTT, HTML5, Xamarin, NodeJS, LINUX. 
+                </p>
+                <h4>Network Cameras</h4>
+                <div class="progress mb-4">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 90%;"></div>
+                </div>
+                <h4>ACCESS CONTROL</h4>
+                <div class="progress mb-4">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 80%;"></div>
+                </div>
+                <h4>RADAR Integration</h4>
+                <div class="progress mb-4">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 50%;"></div>
+                </div>
+                <div class="sketchfab-embed-wrapper"> <iframe title="Detailed Human Skull" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/2d6feb90e20d4389afb2b885eece0a48/embed"> </iframe> <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;"> <a href="https://sketchfab.com/3d-models/detailed-human-skull-2d6feb90e20d4389afb2b885eece0a48?utm_medium=embed&utm_campaign=share-popup&utm_content=2d6feb90e20d4389afb2b885eece0a48" target="_blank" style="font-weight: bold; color: #1CAAD9;"> Detailed Human Skull </a> by <a href="https://sketchfab.com/VAA?utm_medium=embed&utm_campaign=share-popup&utm_content=2d6feb90e20d4389afb2b885eece0a48" target="_blank" style="font-weight: bold; color: #1CAAD9;"> VAA </a> on <a href="https://sketchfab.com?utm_medium=embed&utm_campaign=share-popup&utm_content=2d6feb90e20d4389afb2b885eece0a48" target="_blank" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a></p></div>
+
+            </div>
+        </div>
+        
+        <div class="collapse" id="contact">
+            <div class="p-4 bg-danger">
+                <h1>Contact Me</h1>
+                <p>Please feel free to reach out to me</p>
+            </div>
+            <div class="card card-body">
+                <div class="row justify-content-center">
+                    <div class="col-lg-8 col-md-8 col-12">
+                        <form>
+                            <div class="form-group">
+                                <div class="input-group input-group-lg">
+                                    <span class="input-group-addon bg-warning text-white p-2">
+                                        <i class="fa fa-user"></i>
+                                    </span>
+                                    <input type="text" name="" id="user" class="form-control bg-black text-dark"
+                                        placeholder="Name" autocomplete="off">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="input-group input-group-lg">
+                                    <span class="input-group-addon bg-warning text-white p-2">
+                                        <i class="fa fa-envelope"></i>
+                                    </span>
+                                    <input type="email" name="email" id="user" class="form-control bg-black text-dark"
+                                        placeholder="Email" autocomplete="off">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="input-group input-group-lg">
+                                    <span class="input-group-addon bg-warning text-white p-2">
+                                        <i class="fa fa-envelope"></i>
+                                    </span>
+                                    <input type="text" name="" id="message" class="form-control bg-black text-dark"
+                                        placeholder="Message" autocomplete="off">
+                                </div>
+                            </div>
+                            <input type="submit" value="Send" class="btn btn-success">
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <footer class="p-5 bg-black text-center">
+          <a href="Profile.pdf" download> Download
+        </footer>
+</div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+
+    <script>
+        $('.font-div').click(function(){
+            $('.collapse').collapse('hide');
+        });
+
+    </script>
 </body>
 </html>
